--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-	<h1>Dvelopement in interesting thing because while working we can see our result so it helps me to do work hour and hours without getting bored hence developement field is problem solving by nature so it makes me more interested in it.<h1>
-	<p>I was interest</p>
+	<h1>Why I want to become a developer<h1>
+	<p>Dvelopement in interesting thing because while working we can see our result so it helps me to do work hour and hours without getting bored hence developement field is problem solving by nature so it makes me more interested in it.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
