--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
+<title>Why i want to become a developer?</title>
 <body>
 	<h1>Why I want to become a developer?<h1>
 	<p>
