--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 <title>Why i want to become a developer?</title>
 <body>
-	<h1>Why I want to become a developer?<h1>
+	<h1>Why I want to become a developer?</h1>
 	<p>
 		Dvelopement in interesting thing because while working we can see our result
 		so it helps me to do work hour and hours without getting bored hence 
